--- a/android/app/src/main/res/layout/activity_main.xml
+++ b/android/app/src/main/res/layout/activity_main.xml
@@ -83,16 +83,23 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <TextView
-            android:id="@+id/textViewb2"
+        <Button
+            android:id="@+id/discovery_button"
             android:layout_width="match_parent"
-            android:layout_height="141dp"
-            android:layout_margin="10dip"
-            android:background="#3700B2"
-            android:fontFamily="sans-serif-medium"
-            android:gravity="center"
-            android:text="PLEASE WAIT, DISCOVERY AND PRINTING WILL AUTOMATICALLY TAKE PLACE"
-            android:textColor="@color/white" />
+            android:layout_height="wrap_content"
+            android:backgroundTint="#3700B2"
+            android:text="DISCOVER"
+            android:textColor="#FFFFFF"
+            android:typeface="monospace" />
+
+        <Button
+            android:id="@+id/print_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#3700B2"
+            android:text="PRINT"
+            android:textColor="#FFFFFF"
+            android:typeface="monospace" />
 
         <LinearLayout
             android:layout_width="match_parent"
